Replace get(0) with getFirst() from Java 21